remove GR from Miravento

--- a/_data/clients.yml
+++ b/_data/clients.yml
@@ -17,6 +17,9 @@ en:
     - name: Cava Nektar
       logo: /assets/client-logos/logo-cava-nektar.svg
       url: https://cavanektar.gr/
+    - name: Υγεία Hospital
+      logo: /assets/client-logos/logo-cava-nektar.svg
+      url: 
   retailers-title: Where to buy our products
   retailers-text: The expansion of our direct distribution network is our most recent project. Some of our products are already available on Bol.com and in major Greek retail stores. 
   retailers: 
