--- a/_data/brands.yml
+++ b/_data/brands.yml
@@ -93,7 +93,7 @@ en:
 
       Since 1956, Vallebelbo has been harvesting and vinifying grapes produced by 160 associated producers who own some 500 hectares of beautiful vineyards in the Langhe hills.
 
-      Now, in exclusive collaboration with Theeta, the new Miravento range is coming to Greece and Europe.
+      Now, in exclusive collaboration with Theeta, the new Miravento range is coming to Europe.
 
       ## Moscato d'Asti
       **DOCG** (*Controlled and Guaranteed Designation of Origin*)
@@ -129,8 +129,6 @@ en:
       ![](/assets/miravento-prosecco.jpg)
 
       Prosecco DOC joins the Miravento range on request by Theeta and comes to complete the range by offering an option for lovers of *dry* wine.
-
-      **Available soon in Greek stores.**
 el: 
   - name: Beckher
     logo: /assets/beckher-logo-horizontal-gradient-orange.png
@@ -226,7 +224,7 @@ el:
 
       Από το 1956, η Vallebelbo συλλέγει και οινοποιεί τα σταφύλια που παράγονται από 160 συνδεδεμένους παραγωγούς, οι οποίοι κατέχουν περίπου 500 εκτάρια πανέμορφων αμπελώνων στους λόφους Langhe.
 
-      Τώρα, σε αποκλειστική συνεργασία με την Theeta, η νέα σειρά Miravento έρχεται στην Ελλάδα και την Ευρώπη.
+      Τώρα, σε αποκλειστική συνεργασία με την Theeta, η νέα σειρά Miravento έρχεται στην Ευρώπη.
 
       ## Moscato d’Asti
       **DOCG** (*Ελεγχόμενη και Εγγυημένη Ονομασία Προέλευσης*)
@@ -262,9 +260,6 @@ el:
       ![](/assets/miravento-prosecco.jpg)
 
       To Prosecco DOC μπαίνει στη σειρά Miravento κατά παραγγελία της Theeta και έρχεται να ολοκληρώσει τη σειρά προσφέροντας μία ξηρή επιλογή.
-
-      **Σύντομα σε καταστήματα στην Ελλάδα.**
-
     docs: 
       - file: /uploads/Theeta - Miravento Sparkling Wines FEB 2022 EL - website.pdf
         title: Παρουσίαση Κρασιών Miravento 2022
@@ -364,7 +359,7 @@ nl:
 
           Sinds 1956 oogst en vinifieert Vallebelbo de druiven van 160 aangesloten producenten, die ongeveer 500 hectare aan prachtige wijngaarden in de Langhe heuvels bezitten.
 
-          In exclusieve samenwerking met Theeta komt de nieuwe Miravento-lijn nu naar Griekenland en Europa.
+          In exclusieve samenwerking met Theeta komt de nieuwe Miravento-lijn nu naar Europa.
 
           ## Moscato d’Asti
           **DOCG** (*Gecontroleerde en gegarandeerde oorsprongsbenaming*)
@@ -400,5 +395,3 @@ nl:
           ![](/assets/miravento-prosecco.jpg)
 
           Prosecco DOC voegt zich op verzoek van Theeta bij het Miravento-assortiment en maakt het aanbod compleet door een optie te bieden voor liefhebbers van *droge* wijn.
-
-          **Binnenkort verkrijgbaar in de winkels in Griekenland.**
