--- a/_data/brands.yml
+++ b/_data/brands.yml
@@ -93,7 +93,7 @@ en:
 
       Since 1956, Vallebelbo has been harvesting and vinifying grapes produced by 160 associated producers who own some 500 hectares of beautiful vineyards in the Langhe hills.
 
-      Now, in exclusive collaboration with Theeta, the new Miravento range is coming to Europe.
+      Now, in collaboration with Theeta, the new Miravento range is coming to Europe.
 
       ## Moscato d'Asti
       **DOCG** (*Controlled and Guaranteed Designation of Origin*)
@@ -224,7 +224,7 @@ el:
 
       Από το 1956, η Vallebelbo συλλέγει και οινοποιεί τα σταφύλια που παράγονται από 160 συνδεδεμένους παραγωγούς, οι οποίοι κατέχουν περίπου 500 εκτάρια πανέμορφων αμπελώνων στους λόφους Langhe.
 
-      Τώρα, σε αποκλειστική συνεργασία με την Theeta, η νέα σειρά Miravento έρχεται στην Ευρώπη.
+      Τώρα, σε συνεργασία με την Theeta, η νέα σειρά Miravento έρχεται στην Ευρώπη.
 
       ## Moscato d’Asti
       **DOCG** (*Ελεγχόμενη και Εγγυημένη Ονομασία Προέλευσης*)
@@ -359,7 +359,7 @@ nl:
 
           Sinds 1956 oogst en vinifieert Vallebelbo de druiven van 160 aangesloten producenten, die ongeveer 500 hectare aan prachtige wijngaarden in de Langhe heuvels bezitten.
 
-          In exclusieve samenwerking met Theeta komt de nieuwe Miravento-lijn nu naar Europa.
+          In samenwerking met Theeta komt de nieuwe Miravento-lijn nu naar Europa.
 
           ## Moscato d’Asti
           **DOCG** (*Gecontroleerde en gegarandeerde oorsprongsbenaming*)
