add client hygeia

--- a/_data/clients.yml
+++ b/_data/clients.yml
@@ -17,9 +17,9 @@ en:
     - name: Cava Nektar
       logo: /assets/client-logos/logo-cava-nektar.svg
       url: https://cavanektar.gr/
-    - name: Υγεία Hospital
-      logo: /assets/client-logos/logo-cava-nektar.svg
-      url: 
+    - name: Hygeia
+      logo: /assets/client-logos/logo-hygeia.png
+      url: https://www.hygeia.gr/
   retailers-title: Where to buy our products
   retailers-text: The expansion of our direct distribution network is our most recent project. Some of our products are already available on Bol.com and in major Greek retail stores. 
   retailers: 
@@ -51,6 +51,9 @@ el:
     - name: Κάβα Νέκταρ
       logo: /assets/client-logos/logo-cava-nektar.svg
       url: https://cavanektar.gr/
+    - name: Υγεία
+      logo: /assets/client-logos/logo-hygeia.png
+      url: https://www.hygeia.gr/
   retailers-title: Πού μπορείτε να αγοράσετε τα προϊόντα μας
   retailers-text: Η επέκταση του δικτύου άμεσης διανομής μας είναι το πιο πρόσφατο έργο μας. Ορισμένα από τα προϊόντα μας είναι ήδη διαθέσιμα στο Bol.com (Ολλανδία) και σε μεγάλα ελληνικά καταστήματα λιανικής πώλησης.
   retailers: 
@@ -82,6 +85,9 @@ nl:
     - name: Cava Nektar
       logo: /assets/client-logos/logo-cava-nektar.svg
       url: https://cavanektar.gr/
+    - name: Hygeia
+      logo: /assets/client-logos/logo-hygeia.png
+      url: https://www.hygeia.gr/
   retailers-title: Waar kunt u onze producten kopen?
   retailers-text: De uitbreiding van ons directe distributienetwerk is ons meest recente project. Sommige van onze producten zijn al verkrijgbaar op Bol.com en in grote Griekse detailhandelszaken. 
   retailers: 
