--- a/_data/brands.yml
+++ b/_data/brands.yml
@@ -7,6 +7,7 @@ en:
     card-text: Our own brand of small domestic appliances.
     tags: Domestic Appliances, Own brand
     url: beckher
+    website: https://beckher.com
     text: |
       **BECKHER is a brand of Theeta B.V.**
 
@@ -19,6 +20,7 @@ en:
     card-text: Innovative, non-polluting disinfectant
     tags: Dininfectant, H<sub>2</sub>O<sub>2</sub>, Argentum, hospitals, cooling towers, wastewater
     url: sanosil
+    website: https://www.sanosil.com
     text: |
       ## What is it?
       
@@ -138,6 +140,7 @@ el:
     card-text: Η δική μας μάρκα μικρών οικιακών συσκευών
     tags: Οικιακές συσκευές ιδίας μάρκας
     url: beckher
+    website: https://beckher.com/el
     text: |
       **Η BECKHER είναι εμπορικό σήμα της Theeta B.V.**
 
@@ -150,6 +153,7 @@ el:
     card-text: Καινοτόμο, μη ρυπογόνο απολυμαντικό
     tags: Απολυμαντικό, H<sub>2</sub>O<sub>2</sub>, ασήμι, νοσοκομεία, πύργοι ψύξης, λύματα
     url: sanosil
+    website: https://www.sanosil.com
     text: |
       ## Τι είναι;
       
@@ -276,6 +280,7 @@ nl:
     card-text: Ons eigen merk van kleine huishoudelijke apparaten
     tags: Huishoudelijke Apparaten, Eigen Merk
     url: beckher
+    website: https://beckher.com
     text: |
       **BECKHER is een merk van Theeta B.V.**
 
@@ -288,6 +293,7 @@ nl:
     intro: De innovatieve chemische ontsmettingsmiddelen van Sanosil zijn uiterst doeltreffende, niet-verontreinigende oplossingen die micro-organismen uitroeien zonder de recipiënt die ze reinigen aan te tasten (actieve bestanddelen, H₂O₂ en sporen van Ag). Theeta is de exclusieve distributeur van Sanosil-producten voor bedrijven in Griekenland en Cyprus.
     tags: Dininfectans, H<sub>2</sub>O<sub>2</sub>, Argentum, ziekenhuizen, koeltorens, afvalwater
     url: sanosil
+    website: https://www.sanosil.com
     text: |
       ## Wat is het?
       
