clients and text changes

--- a/_data/brandpage.yml
+++ b/_data/brandpage.yml
@@ -11,7 +11,7 @@ el:
     title: Περαιτέρω ανάγνωση
     text: Κάντε κλικ σε ένα μπλοκ για να κατεβάσετε τα αρχεία για offline&nbsp;ανάγνωση
   videos:
-    title: Δείτε το σε δράση
+    title: Δείτε το στη δράση
   more-brands: 
     title: Δείτε περισσότερες από τις <em>Μάρκες</em> μας →
 nl: 
