--- a/_data/brands.yml
+++ b/_data/brands.yml
@@ -210,9 +210,9 @@ el:
       - id: 6dv9BU7zNFs
         title: Νεφελοποιητής Sanosil Q-Jet Advanced
       - id: kxFtVoCbTFY
-        title: Απολύμανση ενός ολόκληρου δωματίου με το νεφελοποιητή Sanosil Q-Jet <b>Advanced</b>
+        title: Απολύμανση ολόκληρου δωματίου με το νεφελοποιητή Sanosil Q-Jet <b>Advanced</b>
       - id: 834oQLC5xlE
-        title: πολύμανση ενός ολόκληρου δωματίου με το νεφελοποιητή Sanosil Q-Jet <b>Superior</b>
+        title: Απολύμανση ολόκληρου δωματίου με το νεφελοποιητή Sanosil Q-Jet <b>Superior</b>
       - id: LNAaEtb6HzE
         title: Απολύμανση χώρου με συσκευή airless spray και απολυμαντικό Sanosil
   - name: Miravento
