--- a/_data/brands.yml
+++ b/_data/brands.yml
@@ -12,6 +12,14 @@ en:
       **BECKHER is a brand of Theeta B.V.**
 
       Through close coordination with our production partners, we manufacture electrical and electronic devices of quality and affordability. Our customers are large and small retailers in Greece and the rest of Europe, as well as B2B resellers and end customers who buy from online marketplaces where we are present.
+
+      Beckher products are available on
+
+      - [Bol.com (Netherlands)](https://www.bol.com/nl/nl/w/alle-artikelen-theeta/1699603/) ![](/assets/client-logos/logo-bol.svg)
+      - [Market In (Greece)](https://www.market-in.gr/el-gr/ALL?Title=beckher)
+      - and other stores
+      
+      
   - name: Sanosil
     logo: /assets/sanosil_logo.png
     cover: /assets/sanosil-bg.jpg
@@ -145,6 +153,12 @@ el:
       **Η BECKHER είναι εμπορικό σήμα της Theeta B.V.**
 
       Μέσω στενού συντονισμού με τους συνεργάτες μας στην παραγωγή, κατασκευάζουμε ηλεκτρικές και ηλεκτρονικές συσκευές ποιότητας και προσιτής τιμής. Οι πελάτες μας είναι μεγάλα και μικρά καταστήματα λιανικής πώλησης στην Ελλάδα και την υπόλοιπη Ευρώπη, καθώς και μεταπωλητές B2B και τελικοί πελάτες που αγοράζουν από τα online marketplaces όπου έχουμε παρουσία.
+
+      Τα προϊόντα Beckher είναι διαθέσιμα
+
+      - [στο Market In (Greece)](https://www.market-in.gr/el-gr/ALL?Title=beckher)
+      - [στο Bol.com (Ολλανδία)](https://www.bol.com/nl/nl/w/alle-artikelen-theeta/1699603/) ![](/assets/client-logos/logo-bol.svg)
+      - και [σε άλλα καταστήματα](https://www.skroutz.gr/search?keyphrase=beckher)
   - name: Sanosil
     logo: /assets/sanosil_logo.png
     cover: /assets/sanosil-bg.jpg
@@ -285,6 +299,10 @@ nl:
       **BECKHER is een merk van Theeta B.V.**
 
       Door nauwe coördinatie met onze productiepartners produceren wij elektrische en elektronische apparaten van kwaliteit en betaalbaarheid. Onze klanten zijn grote en kleine detailhandelaren in Griekenland en de rest van Europa, maar ook B2B-wederverkopers en eindklanten die kopen op de online marktplaatsen waar wij aanwezig zijn.
+
+      [Beckher producten kopen op Bol.com](https://www.bol.com/nl/nl/w/alle-artikelen-theeta/1699603/)
+      
+      ![](/assets/client-logos/logo-bol.svg)
   - name: Sanosil
     logo: /assets/sanosil_logo.png
     cover: /assets/sanosil-bg.jpg
