--- a/_data/about.yml
+++ b/_data/about.yml
@@ -1,128 +1,134 @@
-en: | 
-  # About Theeta
+en: 
+  brand-cta: Discover our brands →
+  main-text: | 
+    # About Theeta
 
-  Theeta consists of subsidiaries working in various sectors of import, export and production.
+    Theeta consists of subsidiaries working in various sectors of import, export and production.
 
-  Currently, Theeta manufactures electric and electronic appliances, distributes Italian wine and unique high-tech chemical disinfection solutions, along with providing organizations with much-needed personal protective equipment. 
+    Currently, Theeta manufactures electric and electronic appliances, distributes Italian wine and unique high-tech chemical disinfection solutions, along with providing organizations with much-needed personal protective equipment. 
 
-  We invite you to explore this webpage to find out more about the brand we produce and the ones we distribute. 
+    We invite you to explore this webpage to find out more about the brand we produce and the ones we distribute. 
 
-  **We specialize in distribution and are open to new partnerships.**
+    **We specialize in distribution and are open to new partnerships.**
 
-  Our business model is building long-lasting, mutually beneficial relationships with trusted suppliers and distribution partners.
+    Our business model is building long-lasting, mutually beneficial relationships with trusted suppliers and distribution partners.
 
-  ## Contact 
+    ## Contact 
 
-  Email us at **[info@theeta.nl](mailto:info@theeta.nl)** for more information and collaboration opportunities.
+    Email us at **[info@theeta.nl](mailto:info@theeta.nl)** for more information and collaboration opportunities.
 
-  Our employees have more than 15 years of experience in market research, operations and everything that comes with running successful manufacturing and distribution businesses.
+    Our employees have more than 15 years of experience in market research, operations and everything that comes with running successful manufacturing and distribution businesses.
 
-  **We'd love to talk.**
+    **We'd love to talk.**
 
+  company-info: | 
+    ## Company Information
 
-  ## Company Information
+    Theeta B.V.
 
-  Theeta B.V.
+    763a Johan Huizingalaan  
+    1066 VH, Amsterdam  
+    Netherlands
 
-  763a Johan Huizingalaan  
-  1066 VH, Amsterdam  
-  Netherlands
+    KvK 74961470  
 
-  KvK 74961470  
+    NL860088492B01  
+    EL996796293  
+    DE350191682  
 
-  NL860088492B01  
-  EL996796293  
-  DE350191682  
+  po-box: |
+    ## P.O. Box
+    Theeta B.V.
 
+    Postbus 321  
+    3990 GC, Houten  
+    Netherlands  
+el:
+  brand-cta: Ανακαλύψτε τις μάρκες μας →
+  main-text: | 
+    # Σχετικά με τη Theeta
 
-  ## P.O. Box
-  Theeta B.V.
+    Η Theeta αποτελείται από παραρτήματα που δραστηριοποιούνται σε διάφορους τομείς εισαγωγών, εξαγωγών και παραγωγής.
 
-  Postbus 321  
-  3990 GC, Houten  
-  Netherlands  
-el: | 
-  # Σχετικά με τη Theeta
+    Επί του παρόντος, η Theeta κατασκευάζει ηλεκτρικές και ηλεκτρονικές συσκευές, διανέμει ιταλικό κρασί και μοναδικές λύσεις χημικής απολύμανσης υψηλής τεχνολογίας, καθώς και παρέχει σε οργανισμούς απαραίτητα μέσα ατομικής προστασίας. 
 
-  Η Theeta αποτελείται από παραρτήματα που δραστηριοποιούνται σε διάφορους τομείς εισαγωγών, εξαγωγών και παραγωγής.
+    Σας προσκαλούμε να εξερευνήσετε αυτή την ιστοσελίδα για να μάθετε περισσότερα για το εμπορικό σήμα που παράγουμε και αυτά που διανέμουμε. 
 
-  Επί του παρόντος, η Theeta κατασκευάζει ηλεκτρικές και ηλεκτρονικές συσκευές, διανέμει ιταλικό κρασί και μοναδικές λύσεις χημικής απολύμανσης υψηλής τεχνολογίας, καθώς και παρέχει σε οργανισμούς απαραίτητα μέσα ατομικής προστασίας. 
+    **Ειδικευόμαστε στη διανομή και είμαστε ανοιχτοί σε νέες συνεργασίες**.
 
-  Σας προσκαλούμε να εξερευνήσετε αυτή την ιστοσελίδα για να μάθετε περισσότερα για το εμπορικό σήμα που παράγουμε και αυτά που διανέμουμε. 
+    Το επιχειρηματικό μας μοντέλο είναι η οικοδόμηση μακροχρόνιων, αμοιβαία επωφελών σχέσεων με αξιόπιστους προμηθευτές και συνεργάτες διανομής.
 
-  **Ειδικευόμαστε στη διανομή και είμαστε ανοιχτοί σε νέες συνεργασίες**.
+    ## Επικοινωνία 
 
-  Το επιχειρηματικό μας μοντέλο είναι η οικοδόμηση μακροχρόνιων, αμοιβαία επωφελών σχέσεων με αξιόπιστους προμηθευτές και συνεργάτες διανομής.
+    Στείλτε μας ένα email στο **[info@theeta.nl](mailto:info@theeta.nl)** για περισσότερες πληροφορίες και ευκαιρίες συνεργασίας.
 
-  ## Επικοινωνία 
+    Οι υπάλληλοί μας έχουν περισσότερα από 15 χρόνια εμπειρίας στην έρευνα αγοράς, στις λειτουργικές διαδικασίες και σε ό,τι συνεπάγεται η λειτουργία επιτυχημένων επιχειρήσεων παραγωγής και διανομής.
 
-  Στείλτε μας ένα email στο **[info@theeta.nl](mailto:info@theeta.nl)** για περισσότερες πληροφορίες και ευκαιρίες συνεργασίας.
+    **Θα θέλαμε πολύ να μιλήσουμε**.
 
-  Οι υπάλληλοί μας έχουν περισσότερα από 15 χρόνια εμπειρίας στην έρευνα αγοράς, στις λειτουργικές διαδικασίες και σε ό,τι συνεπάγεται η λειτουργία επιτυχημένων επιχειρήσεων παραγωγής και διανομής.
+  company-info: | 
+    ## Στοιχεία εταιρείας
 
-  **Θα θέλαμε πολύ να μιλήσουμε**.
+    Theeta B.V.
 
+    763a Johan Huizingalaan  
+    1066 VH, Άμστερνταμ  
+    Ολλανδία
 
-  ## Στοιχεία εταιρείας
+    KvK 74961470  
 
-  Theeta B.V.
+    NL86008849492B01  
+    EL996796293  
+    DE350191682  
 
-  763a Johan Huizingalaan  
-  1066 VH, Άμστερνταμ  
-  Ολλανδία
+  po-box: |
+    ## Ταχυδρομική θυρίδα
+    Theeta B.V.
 
-  KvK 74961470  
+    Postbus 321  
+    3990 GC, Houten  
+    Ολλανδία  
+nl:
+  brand-cta: Ontdek onze merken →
+  main-text: | 
+    # Over Theeta
 
-  NL86008849492B01  
-  EL996796293  
-  DE350191682  
+    Theeta bestaat uit bijkantoren die werkzaam zijn in verschillende sectoren van import, export en productie.
 
+    Momenteel produceert Theeta elektrische en elektronische apparaten, distribueert het Italiaanse wijn en unieke high-tech chemische desinfectie-oplossingen, en voorziet het organisaties van de broodnodige persoonlijke beschermingsmiddelen. 
 
-  ## Ταχυδρομική θυρίδα
-  Theeta B.V.
+    Wij nodigen u uit deze webpagina te verkennen om meer te weten te komen over de merken die wij produceren en de merken die wij distribueren. 
 
-  Postbus 321  
-  3990 GC, Houten  
-  Ολλανδία  
-nl: |
-  # Over Theeta
+    **Wij zijn gespecialiseerd in distributie en staan open voor nieuwe partnerschappen**.
 
-  Theeta bestaat uit bijkantoren die werkzaam zijn in verschillende sectoren van import, export en productie.
+    Ons bedrijfsmodel is het opbouwen van langdurige, wederzijds voordelige relaties met vertrouwde leveranciers en distributiepartners.
 
-  Momenteel produceert Theeta elektrische en elektronische apparaten, distribueert het Italiaanse wijn en unieke high-tech chemische desinfectie-oplossingen, en voorziet het organisaties van de broodnodige persoonlijke beschermingsmiddelen. 
+    ## Contact 
 
-  Wij nodigen u uit deze webpagina te verkennen om meer te weten te komen over de merken die wij produceren en de merken die wij distribueren. 
+    Email ons op **[info@theeta.nl](mailto:info@theeta.nl)** voor meer informatie en samenwerkingsmogelijkheden.
 
-  **Wij zijn gespecialiseerd in distributie en staan open voor nieuwe partnerschappen**.
+    Onze medewerkers hebben meer dan 15 jaar ervaring in marktonderzoek, operations en alles wat komt kijken bij het runnen van succesvolle productie- en distributiebedrijven.
 
-  Ons bedrijfsmodel is het opbouwen van langdurige, wederzijds voordelige relaties met vertrouwde leveranciers en distributiepartners.
+    **We willen graag praten.**
 
-  ## Contact 
+  company-info: | 
+    ## Bedrijfsinformatie
 
-  Email ons op **[info@theeta.nl](mailto:info@theeta.nl)** voor meer informatie en samenwerkingsmogelijkheden.
+    Theeta B.V.
 
-  Onze medewerkers hebben meer dan 15 jaar ervaring in marktonderzoek, operations en alles wat komt kijken bij het runnen van succesvolle productie- en distributiebedrijven.
+    763a Johan Huizingalaan  
+    1066 VH, Amsterdam  
 
-  **We willen graag praten.**
+    KvK 74961470  
 
+    NL860088492B01  
+    EL996796293  
+    DE350191682  
 
-  ## Bedrijfsinformatie
+  po-box: |
+    ## Postbus
 
-  Theeta B.V.
+    Theeta B.V.
 
-  763a Johan Huizingalaan  
-  1066 VH, Amsterdam  
-
-  KvK 74961470  
-
-  NL860088492B01  
-  EL996796293  
-  DE350191682  
-
-
-  ## Postbus
-
-  Theeta B.V.
-
-  Postbus 321  
-  3990 GC, Houten  
+    Postbus 321  
+    3990 GC, Houten  
